# convert

./: .env  .gitignore  README.md  __init__.py  config.py  convert.py  converter.py  interfaces.py  main.py  observer.py  processing_job.py  processor.py  pyproject.toml  pytest.ini  requirements.txt  test.py  test2.py  ui.py  utils.py  worker.py
interfaces/: processor_interface.py  ui_interface.py  worker_interface.py
processors/: Dockerfile  __init__.py  local_processor.py  processor_on_docker.py  remote_processor.py
service_pjkt/: test.py
service_pjkt/backend/: app.py  common.py  db.py  interface.py  models.py
service_pjkt/frontend/: processor.py
service_pjkt/frontend/converter-app/: .eslintrc  .prettierrc.yaml  package-lock.json  package.json
service_pjkt/frontend/converter-app/components/: box.tsx  mainForm.tsx  output.tsx
service_pjkt/frontend/converter-app/pages/: index.tsx
service_pjkt/frontend/my-app/: package-lock.json
service_pjkt/frontend/my-app/src/: App.js
service_pjkt/frontend/my-app/src/components/: fileUploader.js  output.js  tabs.js
service_project/: docker-compose.yml
service_project/.devcontainer/: devcontainer.json
service_project/backend/: Dockerfile
service_project/backend/app/: main.py
service_project/frontend/: Dockerfile  package-lock.json  vite.config.js
service_project/frontend/src/: App.jsx
tests/: __init__.py  common.py  response_example.json  test.py  test_converter.py  test_main.py  test_ui.py
uis/: __init__.py  cli_ui.py  tk_ui.py
workers/: observer.py  worker.py
(+1 files in other folders)
